--- a/retriever.ipynb
+++ b/retriever.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# A Prompt Pattern Catalog to Enhance Prompt Engineering with ChatGPT\n",
+    "# A Prompt Pattern Catalog to Enhance Prompt Engineering with Gemini\n",
     "\n",
     "https://arxiv.org/abs/2302.11382"
    ]
