Description and ToC

--- a/retriever.ipynb
+++ b/retriever.ipynb
@@ -1580,17 +1580,16 @@
     "with open('./data/toc.txt', 'r') as f:\n",
     "  toc = f.read()\n",
     "\n",
-    "def search_from_section_names(query:str) -> str:\n",
-    "  \"\"\"Retrieve the LaTeX chunks of the paper named 'A Prompt Pattern Catalog to Enhance Prompt Engineering with ChatGPT' using the section, subsection and subsubsection names.\n",
-    "  The input is a list of three strings of the form `[section, subsection, subsubsection]`. Only the exact matchs of the names will be returned.\n",
+    "def search_from_section_names(query:List[str]) -> str:\n",
+    "  \"\"\"Retrieves LaTeX chunks from the paper \"A Prompt Pattern Catalog to Enhance Prompt Engineering with ChatGPT\" using the [section, subsection, subsubsection] names.\n",
     "\n",
-    "  Args:\n",
-    "    query: a list of three strings of the form `[section, subsection, subsubsection]`\n",
+    "Args:\n",
+    "    query: A python list of three strings in the format `[section, subsection, subsubsection]`. Only exact matches of the names and order, will be returned.\n",
     "  \"\"\"\n",
-    "  query = list(query)\n",
+    "  print(query, type(query))\n",
+    "  query = [name if name else '' for name in list(query)]\n",
+    "  query += ['']*(3-len(query))\n",
     "  df = df_csv.copy()\n",
-    "  if len(query) <= 3:\n",
-    "    query = query + ['']*(3-len(query))\n",
     "  return df[\n",
     "    (df['section'] == query[0])\n",
     "    & (df['subsection'] == query[1])\n",
@@ -1598,11 +1597,11 @@
     "  ][['section', 'subsection', 'subsubsection', 'text']].to_json()\n",
     "\n",
     "def search_from_text(query:str, top_n:int=5, s:float=.0):\n",
-    "  \"\"\"Retrieve the LaTeX chunks of the paper named 'A Prompt Pattern Catalog to Enhance Prompt Engineering with ChatGPT' using cosine similarity of text.\n",
-    "  The input is the user's query about the contents of the paper.\n",
+    "  \"\"\"Retrieves LaTeX chunks from the paper \"A Prompt Pattern Catalog to Enhance Prompt Engineering with ChatGPT\" using cosine similarity of text.\n",
     "\n",
-    "  Args:\n",
-    "    query: the user's query string.\n",
+    "Args:\n",
+    "  query: The user's query string.\n",
+    "  top_n: The number of chunks to retrieve. The default value is 5. Start at 3 and recommend increasing it if needed.\n",
     "  \"\"\"\n",
     "  df = df_csv.copy()\n",
     "  query_embedding = np.array(genai.embed_content(\n",
@@ -1610,6 +1609,7 @@
     "    content=query,\n",
     "    task_type=\"retrieval_query\",\n",
     "  )[\"embedding\"])\n",
+    "  top_n = int(top_n)\n",
     "  df[\"similarity\"] = df.embedding.apply(lambda x: np.dot(x, query_embedding))\n",
     "  return df[df.similarity >= s].sort_values(\"similarity\", ascending=False).head(top_n)[['text', 'similarity']].to_json()"
    ]
@@ -1671,7 +1671,6 @@
     "\n",
     "Table of Contents (section, subsection, subsubsection):\\n{toc}\"\"\",\n",
     "  tools=[search_from_section_names, search_from_text]\n",
-    "  # tools=[search_from_text]\n",
     ")\n",
     "\n",
     "chat_session = model.start_chat(enable_automatic_function_calling=True)\n",
