update system prompt

--- a/retriever.ipynb
+++ b/retriever.ipynb
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +640,7 @@
        "[106 rows x 4 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -813,7 +813,7 @@
        "[90 rows x 4 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1567,7 +1567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1614,7 +1614,7 @@
     "  )[\"embedding\"])\n",
     "  top_n = int(top_n)\n",
     "  df[\"similarity\"] = df.embedding.apply(lambda x: np.dot(x, query_embedding))\n",
-    "  return df[df.similarity >= s].sort_values(\"similarity\", ascending=False).head(top_n)[['text', 'similarity']].to_json()"
+    "  return df[df.similarity >= s].sort_values(\"similarity\", ascending=False).head(top_n)[['section', 'subsection', 'subsubsection', 'text', 'similarity']].to_json()"
    ]
   },
   {
