update system prompt

--- a/retriever.ipynb
+++ b/retriever.ipynb
@@ -1658,21 +1658,25 @@
     "  'danger':'block_none'\n",
     "}\n",
     "\n",
+    "system_instruction=f\"\"\"You are a retriever engine.\n",
+    "You can retrieve the contents of the paper titled 'A Prompt Pattern Catalog to Enhance Prompt Engineering with ChatGPT'.\n",
+    "\n",
+    "Even if you are pretty sure, you, first, try to retrieve the paper's content.\n",
+    "If you are failed to retrieve, then just say you cannot find; never use your prior knowledge.\n",
+    "When you use the function `search_from_section_names`, first, you try fill all the three `[section, subsection, subsubsection]` names to get a chunk; but `subsection` or `subsubsection` can be empty string '' anyway.\n",
+    "If you cannot determine which section or (sub)subsection should be chosen, use the function `search_from_text` which is using cosine similarity of the query and the document body text.\n",
+    "If you think we need more chunks, then ask the user want to get more.\n",
+    "\n",
+    "You have to use Korean (한국어) if the user asks in Korean (한국어).\n",
+    "Otherwise you must use English.\n",
+    "\n",
+    "Table of Contents (each depth means [section, subsection, subsubsection]):\\n{toc}\"\"\"\n",
+    "\n",
     "model = genai.GenerativeModel(\n",
     "  model_name=\"gemini-1.5-flash\",\n",
     "  generation_config=generation_config,\n",
     "  safety_settings=safety_settings,\n",
-    "  system_instruction=f\"\"\"You are an experienced prompt engineer.\n",
-    "You can retrieve the contents of the paper titled 'A Prompt Pattern Catalog to Enhance Prompt Engineering with ChatGPT'.\n",
-    "\n",
-    "If you are not sure, then just say you don't know; never make up a story.\n",
-    "When you use the function `search_from_section_names`, first, you try fill all the three `[section, subsection, subsubsection]` names to get one or two chunks.\n",
-    "If you think we need more chunks, then ask the user want to get more.\n",
-    "\n",
-    "You have to use Korean (한국어) only if the user asks in Korean (한국어).\n",
-    "Otherwise you must use English.\n",
-    "\n",
-    "Table of Contents (section, subsection, subsubsection):\\n{toc}\"\"\",\n",
+    "  system_instruction=system_instruction,\n",
     "  tools=[search_from_section_names, search_from_text]\n",
     ")\n",
     "\n",
