authors, abstract, reference

--- a/retriever.ipynb
+++ b/retriever.ipynb
@@ -15,6 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import re\n",
     "import json\n",
     "from ast import literal_eval\n",
     "import numpy as np\n",
@@ -53,6 +54,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def get_name(s):\n",
+    "  s = s.split('}')[0][1:].replace('\\\\', '').strip()\n",
+    "  return re.sub(r'\\s+', ' ', s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "doc, ref = doc.split(\"\\\\begin{thebibliography}\")\n",
     "ref = \"\\\\begin{thebibliography}\" + ref"
    ]
@@ -64,7 +76,7 @@
    "outputs": [],
    "source": [
     "sections = [\n",
-    "  (s.split('}')[0][1:].replace('\\\\', ''), '}'.join(s.split('}')[1:]).strip())\n",
+    "  (get_name(s), '}'.join(s.split('}')[1:]).strip())\n",
     "  for s in doc.split(\"\\\\section\")[1:]\n",
     "]\n",
     "pd.DataFrame(sections, columns=['section', 'text'])"
@@ -77,7 +89,7 @@
    "outputs": [],
    "source": [
     "subsections = [\n",
-    "  (n1, \"\", s) if i==0 else (n1, s.split('}')[0][1:].replace('\\\\',''), '}'.join(s.split('}')[1:]).strip())\n",
+    "  (n1, \"\", s) if i==0 else (n1, get_name(s), '}'.join(s.split('}')[1:]).strip())\n",
     "  for n1, t in sections\n",
     "  for i, s in enumerate(t.split(\"\\\\subsection\"))\n",
     "]\n",
@@ -91,12 +103,11 @@
    "outputs": [],
    "source": [
     "subsubsections = [\n",
-    "  (n1, n2, \"\", s) if i==0 else (n1, n2, s.split('}')[0][1:].replace('\\\\',''), '}'.join(s.split('}')[1:]).strip())\n",
+    "  (n1, n2, \"\", s) if i==0 else (n1, n2, get_name(s), '}'.join(s.split('}')[1:]).strip())\n",
     "  for n1, n2, t in subsections\n",
     "  for i, s in enumerate(t.split(\"\\\\subsubsection\"))\n",
     "]\n",
-    "df_chunks = pd.DataFrame(subsubsections, columns=['section', 'subsection', 'subsubsection', 'text'])\n",
-    "df_chunks"
+    "pd.DataFrame(subsubsections, columns=['section', 'subsection', 'subsubsection', 'text'])"
    ]
   },
   {
@@ -105,23 +116,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_chunks = df_chunks[df_chunks.text.apply(lambda s: len(s)>30)].reset_index(drop=True)\n",
-    "df_chunks"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# remove redundant spaces on title\n",
-    "df_chunks['section'] = df_chunks.section.str.replace(r'\\s+', ' ', regex=True)\n",
-    "df_chunks['subsection'] = df_chunks.subsection.str.replace(r'\\s+', ' ', regex=True)\n",
-    "df_chunks['subsubsection'] = df_chunks.subsubsection.str.replace(r'\\s+', ' ', regex=True)\n",
-    "# add section, subsection, subsubsection tags\n",
-    "df_chunks['text'] = [f\"\\\\section{{{s}}}\\n\\\\subsection{{{ss}}}\\n\\\\subsubsection{{{sss}}}\\n{text}\" for i, (s, ss, sss, text) in df_chunks.iterrows()]\n",
+    "chunks = [\n",
+    "  (n1, n2, n3, f\"\\\\section{{{n1}}}\\n\\\\subsection{{{n2}}}\\n\\\\subsubsection{{{n3}}}\\n\"+s)\n",
+    "  for n1, n2, n3, s in subsubsections if len(s) > 100\n",
+    "]\n",
+    "chunks.append((\"Authors and Abstract\", '', '', doc.split(\"\\\\section\")[0]))\n",
+    "chunks.append((\"Bibliography\", '', '', ref))\n",
     "\n",
+    "df_chunks = pd.DataFrame(chunks, columns=['section', 'subsection', 'subsubsection', 'text'])\n",
     "df_chunks"
    ]
   },
@@ -380,42 +382,6 @@
    "outputs": [],
    "source": [
     "print(response.candidates[0].content.parts[0].text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "chat_session.history"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "chat_session.rewind()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "chat_session.history"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "chat_session._history.clear()"
    ]
   },
   {
