latex to markdown

--- a/Encoding_for_Retriever.ipynb
+++ b/Encoding_for_Retriever.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# A Prompt Pattern Catalog to Enhance Prompt Engineering with Gemini\n",
-    "\n",
-    "https://arxiv.org/abs/2302.11382"
+    "# Make Embedding with Gemini"
    ]
   },
   {
@@ -15,7 +13,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import re\n",
     "import json\n",
     "from ast import literal_eval\n",
     "import numpy as np\n",
@@ -31,110 +28,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Parsing the $\\LaTeX$ File"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"./data/2302.11382v1\", \"r\") as f:\n",
-    "  doc = f.read()\n",
-    "doc[:100]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_name(s):\n",
-    "  s = s.split('}')[0][1:].replace('\\\\', '').strip()\n",
-    "  return re.sub(r'\\s+', ' ', s)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "doc, ref = doc.split(\"\\\\begin{thebibliography}\")\n",
-    "ref = \"\\\\begin{thebibliography}\" + ref"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sections = [\n",
-    "  (get_name(s), '}'.join(s.split('}')[1:]).strip())\n",
-    "  for s in doc.split(\"\\\\section\")[1:]\n",
-    "]\n",
-    "pd.DataFrame(sections, columns=['section', 'text'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "subsections = [\n",
-    "  (n1, \"\", s) if i==0 else (n1, get_name(s), '}'.join(s.split('}')[1:]).strip())\n",
-    "  for n1, t in sections\n",
-    "  for i, s in enumerate(t.split(\"\\\\subsection\"))\n",
-    "]\n",
-    "pd.DataFrame(subsections, columns=['section', 'subsection', 'text'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "subsubsections = [\n",
-    "  (n1, n2, \"\", s) if i==0 else (n1, n2, get_name(s), '}'.join(s.split('}')[1:]).strip())\n",
-    "  for n1, n2, t in subsections\n",
-    "  for i, s in enumerate(t.split(\"\\\\subsubsection\"))\n",
-    "]\n",
-    "pd.DataFrame(subsubsections, columns=['section', 'subsection', 'subsubsection', 'text'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "chunks = [\n",
-    "  (n1, n2, n3, f\"\\\\section{{{n1}}}\\n\\\\subsection{{{n2}}}\\n\\\\subsubsection{{{n3}}}\\n\"+s)\n",
-    "  for n1, n2, n3, s in subsubsections if len(s) > 100\n",
-    "]\n",
-    "chunks.append((\"Authors and Abstract\", '', '', doc.split(\"\\\\section\")[0]))\n",
-    "chunks.append((\"Bibliography\", '', '', ref))\n",
-    "\n",
-    "df_chunks = pd.DataFrame(chunks, columns=['section', 'subsection', 'subsubsection', 'text'])\n",
+    "df_chunks = pd.read_csv(\"./data/2302.11382v1.csv\", index_col=0).fillna('')\n",
     "df_chunks"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "toc_mkdn = df_chunks[['section','subsection','subsubsection']].drop_duplicates().to_markdown()\n",
-    "print(toc_mkdn)"
    ]
   },
   {
@@ -148,7 +48,7 @@
     "  \"top_p\": 0.95,\n",
     "  \"top_k\": 64,\n",
     "  \"max_output_tokens\": 8192,\n",
-    "  \"response_mime_type\": \"application/json\",\n",
+    "  \"response_mime_type\": \"application/json\"\n",
     "}\n",
     "\n",
     "safety_settings={\n",
@@ -163,10 +63,11 @@
     "  generation_config=generation_config,\n",
     "  safety_settings=safety_settings,\n",
     "  system_instruction=\"You return a simple table of contents with JSON format from a given markdown table. The JSON contains a key/value pair of strings 'table of contents' and markdown un-ordered list using `-`.\",\n",
+    "  \n",
     ")\n",
     "\n",
     "chat_session = model.start_chat()\n",
-    "response = chat_session.send_message(toc_mkdn)"
+    "response = chat_session.send_message(df_chunks[['section','subsection','subsubsection']].to_markdown())"
    ]
   },
   {
@@ -204,7 +105,7 @@
    "outputs": [],
    "source": [
     "embds = []\n",
-    "for i, (s, ss, sss, text) in tqdm(df_chunks.iterrows(), total=len(df_chunks)):\n",
+    "for i, (s, ss, sss, _, text) in tqdm(df_chunks.iterrows(), total=len(df_chunks)):\n",
     "  for t in [s, ss, sss]:\n",
     "    if t:\n",
     "      title = t\n",
@@ -251,7 +152,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_chunks.to_csv(\"./data/2302.11382v1_embeddings.csv\")"
+    "df_chunks.loc[:,df_chunks.columns != 'latex'].to_csv(\"./data/2302.11382v1_embeddings.csv\")"
    ]
   },
   {
